--- a/addon/config.yaml
+++ b/addon/config.yaml
@@ -1,7 +1,7 @@
 name: "Immich public proxy"
-description: "Homeassistant addon containing an Immich public proxy"
+description: "Homeassistant addon that wraps an Immich public proxy"
 version: "1.0.0"
-slug: "imich_public_proxy"
+slug: "immich_public_proxy"
 init: false
 arch:
   - aarch64
