--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
 name: Immich public proxy Addon repository
-url: 'https://github.com/home-assistant/addons-example'
+url: 'https://https://github.com/cheelio/immich-public-proxy-addon'
 maintainer: Michiel <cheelio@gmail.com>
