--- a/addon/Dockerfile
+++ b/addon/Dockerfile
@@ -1,12 +1,15 @@
 ARG BUILD_FROM
-FROM $BUILD_FROM
+FROM alangrainger/immich-public-proxy:latest
+
+
+
 
 # Copy data for add-on
-COPY run.sh /
-RUN chmod a+x /run.sh
+#COPY run.sh /
+#RUN chmod a+x /run.sh
 
-CMD [ "/run.sh" ]
-
+#CMD [ "/run.sh" ]
+CMD ["node", "dist/index.js" ]
 
 
 
